[project]
name = "langchainfull"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=1.3.2",
    "langchain[anthropic,claude]>=1.3.9",
    "numpy>=2.4.6",
    "python-dotenv>=1.2.2",
]
